--- a/views/update.ejs
+++ b/views/update.ejs
@@ -9,20 +9,22 @@
   </head>
   <body class="bg-zinc-900 text-white">
     <div class="flex justify-center items-center">
-      <h1 class="mt-16 mb-5 text-2xl absolute font-semibold">Update the  User</h1>
+      <h1 class="mt-16 mb-5 text-2xl absolute font-semibold">
+        Update the User
+      </h1>
       <hr class="bg-white h-1 w-1/2 rounded mt-32" />
     </div>
     <div class="justify-center items-center flex font-semibold">
       <div
         class="w-64 mt-20 border justify-center items-start flex p-5 rounded-md"
       >
-        <form action="/update" method="post">
+        <form action="/edit/<%= user._id %>" method="post">
           <label class="block mb-2" for="UserName">UserName</label>
           <input
             type="text"
             name="UserName"
             class="bg-zinc-700 rounded-[5px] px-1 py-1 outline-none"
-            placeholder="<%= user.UserName %>"
+            value="<%= user.UserName %>"
           />
           <label class="block mb-2 mt-2" for="Registration"
             >Registration No</label
@@ -31,21 +33,21 @@
             type="text"
             name="Registration"
             class="bg-zinc-700 rounded-[5px] px-1 py-1 outline-none"
-            placeholder="<%= user.Registration %>"
+            value="<%= user.Registration %>"
           />
           <label class="block mb-2 mt-2" for="Course">Course</label>
           <input
             type="text"
             name="Course"
             class="bg-zinc-700 rounded-[5px] px-1 py-1 outline-none"
-            placeholder="<%= user.Course %>"
+            value="<%= user.Course %>"
           />
           <label class="block mb-2 mt-2" for="Semester">Semester</label>
           <input
             type="text"
             name="Semester"
             class="bg-zinc-700 rounded-[5px] px-1 py-1 outline-none"
-            placeholder="<%= user.Semester %>"
+            value="<%= user.Semester %>"
           />
           <input
             type="submit"
